# Taskmanagement-App

./: .coveragerc  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .sonarcloud.properties  .windsurfrules  CLAUDE.md  Dockerfile  LICENSE  README.md  README_DEPLOYMENT.md  alembic.ini  mypy.ini  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  task_management.db  test.env
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  publish-openapi-release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  001_initial_create_users_and_tasks.py  002_add_created_by_to_tasks.py  002_add_indexes.py  003_add_defaults.py  004_drop_assignment_columns_recreate.py  005_add_last_login.py  0996a25c0866_add_indexes_to_task_foreign_key_columns.py  561afd10771e_add_display_name_and_started_by.py  ade43a5b5e3a_add_task_assignment_and_creator_tracking.py  create_users_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  auth.py  print.py  tasks.py
app/core/: auth.py  config.py  logging.py
app/core/printing/: __init__.py  base_printer.py  pdf_printer.py  printer_factory.py  usb_printer.py
app/crud/: __init__.py  task.py
app/db/: base.py  session.py
app/db/models/: __init__.py  task.py
app/jobs/: scheduler.py  task_maintenance.py
app/schemas/: __init__.py  task.py
config/: printers.ini
scripts/: generate_openapi_json.py
taskmanagement_app/: main.py
taskmanagement_app/api/: deps.py
taskmanagement_app/api/v1/: api.py
taskmanagement_app/api/v1/endpoints/: admin.py  auth.py  print.py  tasks.py  users.py
taskmanagement_app/auth/: dependencies.py  router.py  utils.py
taskmanagement_app/core/: auth.py  config.py  datetime_utils.py  exceptions.py  logging.py  security.py
taskmanagement_app/core/printing/: base_printer.py  pdf_printer.py  printer_factory.py  usb_printer.py
taskmanagement_app/crud/: __init__.py  data_export.py  task.py  user.py
taskmanagement_app/db/: base.py  init_db.py  session.py
taskmanagement_app/db/models/: __init__.py  task.py  user.py
taskmanagement_app/jobs/: scheduler.py  task_maintenance.py
taskmanagement_app/migrations/: env.py
taskmanagement_app/migrations/versions/: 001_initial_create_users_and_tasks.py  002_add_created_by_to_tasks.py  003_remove_assignment_type_and_assigned_to.py  004_drop_assignment_columns_recreate.py  005_add_is_private_to_tasks.py  561afd10771e_add_display_name_and_started_by.py
taskmanagement_app/schemas/: __init__.py  common.py  data_export.py  task.py  token.py  user.py
taskmanagement_app/scripts/: init_admin.py
taskmanagement_app/utils/: gravatar.py
tests/: conftest.py  test_admin_endpoints.py  test_admin_user_endpoints.py  test_api.py  test_crud.py  test_data_export_import.py  test_gravatar.py  test_jwt_auth.py  test_maintenance.py  test_one_assignment_type.py  test_print_endpoint.py  test_printers.py  test_private_tasks.py  test_security.py  test_startup_import.py  test_task_assignment.py  test_task_creation_atomic.py  test_task_visibility_crud.py  test_user_auth.py  test_user_crud.py  test_user_endpoints.py  test_user_schema.py  test_utils.py
tests/core/printing/: conftest.py  test_usb_printer.py
tests/e2e/: conftest.py  test_data_operations.py  test_smoke.py  test_task_lifecycle.py  test_user_management.py
