[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taskmanagement_app"
version = "0.3.1"
description = "A task management application"
authors = ["Hannes Brandstätter-Müller <hannes.mueller@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "taskmanagement_app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
alembic = "1.17.2"
annotated-types = "0.7.0"
anyio = "4.12.0"
appdirs = "1.4.4"
apscheduler = "3.11.1"
argcomplete = "3.6.3"
argparse = "1.4.0"
bcrypt = ">=5.0.0,<5.1.0"
cffi = "2.0.0"
fastapi = "0.128.0"
starlette = "0.50.0"
uvicorn = {version = "0.40.0", extras = ["standard"]}
sqlalchemy = "2.0.45"
pydantic = "2.12.5"
"pydantic-settings" = "2.12.0"
"python-dotenv" = "1.2.1"
"python-jose" = {version = "3.5.0", extras = ["cryptography"]}
"python-multipart" = "0.0.21"
httpx = "0.28.1"
reportlab = "4.4.7"
"python-escpos" = "3.1"
"qrcode" = {version = "8.2", extras = ["pil"]}
"email-validator" = ">=2.2.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-asyncio = ">=1.0.0,<2.0.0"
black = ">=23.11.0,<26.0.0"
flake8 = ">=7.3.0,<7.4.0"
isort = "*"
mypy = ">=1.0.0"
types-python-jose = "*"
types-python-dateutil = "*"
types-requests = "*"
types-setuptools = "*"
types-qrcode = "*"
httpx = ">=0.25.0,<0.29.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = ["venv", ".venv", ".git", "__pycache__", "output", "dist", "build", ".pytest_cache", ".coverage", "htmlcov"]
known_first_party = ["taskmanagement_app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
exclude = "venv/"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "taskmanagement_app.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pytest.*", "fastapi.*", "sqlalchemy.*", "escpos.*", "alembic.*", "reportlab.*", "jose.*", "pydantic_settings.*", "setuptools.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.flake8]
max-line-length = 88  # Match black's line length
exclude = [".git", "__pycache__", "build", "dist", "venv"]
per-file-ignores = """
    # Allow unused imports in __init__.py files
    __init__.py: F401,W391
    # Allow line break before/after binary operator and module level imports not at top in test files
    test_*.py: E501,E402
"""
ignore = [
    "W503",  # Allow line break before binary operator
    "W504",  # Allow line break after binary operator
    "D103",  # Don't require docstrings for tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=taskmanagement_app --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
